syntax = "proto3";

package org.corfudb.runtime;
option java_package = "org.corfudb.runtime.proto.service";

import "rpc_common.proto";
/**
 * Protobuf definitions for the Remote Corfu Table server RPCs. These
 * include request and response payloads for: GET, SCAN, CONTAINS_KEY, CONTAINS_VALUE, and SIZE.
 */

//message container holding all remote corfu table requests
message RemoteCorfuTableRequestMsg {
  oneof payload {
    RemoteCorfuTableGetRequestMsg get = 1;
    RemoteCorfuTableScanRequestMsg scan = 2;
    RemoteCorfuTableContainsKeyRequestMsg contains_key = 3;
    RemoteCorfuTableContainsValueRequestMsg contains_value = 4;
    RemoteCorfuTableSizeRequestMsg size = 5;
  }
}

message RemoteCorfuTableResponseMsg {
  oneof payload {
    RemoteCorfuTableGetResponseMsg get_response = 1;
    RemoteCorfuTableScanResponseMsg scan_response = 2;
    RemoteCorfuTableContainsResponseMsg contains_response = 3;
    RemoteCorfuTableSizeResponseMsg size_response = 4;
  }
}

message RemoteCorfuTableGetRequestMsg {
 UuidMsg streamID = 1;
 bytes versionedKey = 2;
}

message RemoteCorfuTableGetResponseMsg {
  bytes payloadValue = 1;
}

message RemoteCorfuTableScanRequestMsg {
  UuidMsg streamID = 1;
  uint32 numEntriesToScan = 2;
  uint64 timestamp = 3;
  bytes versionedStartKey = 4;
}

message RemoteCorfuTableScanResponseMsg {
  repeated RemoteCorfuTableEntryMsg entries = 1;
}

message RemoteCorfuTableContainsKeyRequestMsg {
  UuidMsg streamID = 1;
  bytes versionedKey = 2;
}

message RemoteCorfuTableContainsResponseMsg {
  bool contains = 1;
}

message RemoteCorfuTableContainsValueRequestMsg {
  bytes payloadValue = 1;
  UuidMsg streamID = 2;
  uint64 timestamp = 3;
  uint32 internalScanSize = 4;
}

message RemoteCorfuTableSizeRequestMsg {
  UuidMsg streamID = 1;
  uint64 timestamp = 2;
  uint32 internalScanSize = 3;
}

message RemoteCorfuTableSizeResponseMsg {
  uint32 size = 1;
}

message RemoteCorfuTableEntryMsg {
  bytes versionedKey = 1;
  bytes payloadValue = 2;
}